[gd_scene load_steps=8 format=3 uid="uid://bff4xomm6pis7"]

[ext_resource type="Script" path="res://scenes/dev/level_loader.gd" id="1_8ueam"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cumnq"]

[sub_resource type="BoxMesh" id="BoxMesh_h4ar8"]
material = SubResource("StandardMaterial3D_cumnq")
size = Vector3(1, 0.1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_jyp18"]
size = Vector3(1, 0.1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1j8w7"]
size = Vector3(1, 2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glqff"]
transparency = 1
albedo_color = Color(0.160784, 1, 0.156863, 0.478431)

[sub_resource type="BoxMesh" id="BoxMesh_lmjiy"]
material = SubResource("StandardMaterial3D_glqff")
size = Vector3(1, 2, 1)

[node name="LevelLoader" type="Node3D" groups=["Loader"]]
script = ExtResource("1_8ueam")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_h4ar8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_jyp18")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_1j8w7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_lmjiy")

[node name="DelayedStart" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="DelayedStart" to="." method="_on_delayed_start_timeout"]
